2010-01-25  Andy Koppe  <andy.koppe@gmail.com>

	* faq-using.xml: Fix typos and remove incorrect locale-specific
	documentation.
	* new-features.sgml: Ditto.
	* pathnames.sgml: Ditto.

2010-01-24  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml: Rework layout to use itemizedlist.  Fix typo.
	Add two missing entries.

2010-01-23  Corinna Vinschen  <corinna@vinschen.de>

	* setup2.sgml (setup-locale-charsetlist): Add CP932.  Change description
	for SJIS.

2010-01-23  Corinna Vinschen  <corinna@vinschen.de>

	* setup2.sgml (setup-locale-charsetlist): Add ASCII and TIS-620.  Add
	various aliases and case differences.

2010-01-22  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.2): Add chapter for news in 1.7.2.
	* setup2.sgml (setup-locale-ov): Describe how valid locales are
	determined by Windows locale support.  Change description for modifiers
	in locale environment variables.
	(setup-locale-how): Describe new charset behaviour.  Mention new
	getlocale tool to fetch valid locale information from Windows.
	(setup-locale-missing): Drop now implemented LC_foo options.
	Explain missing LC_MESSAGES in more detail.

2010-01-17  Corinna Vinschen  <corinna@vinschen.de>

	* setup2.sgml (setup-locale): Mention three character codes per
	ISO 639-3.

2010-01-17  Corinna Vinschen  <corinna@vinschen.de>
	    Andy Koppe <andy.koppe@gmail.com>

	* setup2.sgml (setup-locale): Adapt description to the C using ASCII
	change in 1.7.2.

2010-01-16  Christopher Faylor  <me+cygwin@cgf.cx>

	* setup-net.sgml: Remove obsolete assertion.

2010-01-15  Corinna Vinschen  <corinna@vinschen.de>

	Suggested by Frank Fesevur <ffes@users.sourceforge.net>:
	* faq-using.xml (faq.using.bloda): Clarify wxvault.dll.

2010-01-15  Christopher Faylor  <me+cygwin@cgf.cx>

	* faq-setup.xml: Add missing setup options.  Sort options.

2010-01-12  Corinna Vinschen  <corinna@vinschen.de>

	* cygwinenv.sgml (cygwinenv-implemented-options): Try to make